--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@ panopoly-7.x-1.25-20150817
 panopoly-7.x-1.25-20150818
 panopoly-7.x-1.26-20150820
 panopoly-7.x-1.26-20150824
+panopoly-7.x-1.27-20150902
