--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,4 @@ panopoly-7.x-1.25-20150818
 panopoly-7.x-1.26-20150820
 panopoly-7.x-1.26-20150824
 panopoly-7.x-1.27-20150902
+panopoly-7.x-1.27-20150909
