--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,4 @@ panopoly-7.x-1.26-20150824
 panopoly-7.x-1.27-20150902
 panopoly-7.x-1.27-20150909
 panopoly-7.x-1.27-20150917
+panopoly-7.x-1.27-20150924
