--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@ panopoly-7.x-1.27-20150909
 panopoly-7.x-1.27-20150917
 panopoly-7.x-1.27-20150924
 panopoly-7.x-1.27-20151008
+panopoly-7.x-1.27-20151015
