--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@ panopoly-7.x-1.27-20150917
 panopoly-7.x-1.27-20150924
 panopoly-7.x-1.27-20151008
 panopoly-7.x-1.27-20151015
+panopoly-7.x-1.28-20151022
