--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,4 @@ panopoly-7.x-1.27-20151008
 panopoly-7.x-1.27-20151015
 panopoly-7.x-1.28-20151022
 panopoly-7.x-1.28-20151029
+panopoly-7.x-1.29-20151119
