--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,4 @@ panopoly-7.x-1.27-20151015
 panopoly-7.x-1.28-20151022
 panopoly-7.x-1.28-20151029
 panopoly-7.x-1.29-20151119
+panopoly-7.x-1.30-20160107
