--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,4 @@ panopoly-7.x-1.30-20160107
 panopoly-7.x-1.30-20160114
 panopoly-7.x-1.30-20160115
 buildamodule--20160115
+buildamodule-7.41-20160115
