--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,4 @@ buildamodule-7.41-20160115
 panopoly-7.x-1.30-20160204
 buildamodule-7.42-20160204
 panopoly-7.x-1.30-20160211
+panopoly-7.x-1.30-20160225
