--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,4 @@ panopoly-7.x-1.30-20160204
 buildamodule-7.42-20160204
 panopoly-7.x-1.30-20160211
 panopoly-7.x-1.30-20160225
+buildamodule-7.43-20160225
