--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,4 @@ buildamodule-7.42-20160204
 panopoly-7.x-1.30-20160211
 panopoly-7.x-1.30-20160225
 buildamodule-7.43-20160225
+panopoly-7.x-1.31-20160303
