--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,4 @@ panopoly-7.x-1.30-20160211
 panopoly-7.x-1.30-20160225
 buildamodule-7.43-20160225
 panopoly-7.x-1.31-20160303
+panopoly-7.x-1.32-20160310
