--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,4 @@ buildamodule-7.43-20160225
 panopoly-7.x-1.31-20160303
 panopoly-7.x-1.32-20160310
 panopoly-7.x-1.32-20160413
+panopoly-7.x-1.33-20160414
