--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,4 @@ panopoly-7.x-1.31-20160303
 panopoly-7.x-1.32-20160310
 panopoly-7.x-1.32-20160413
 panopoly-7.x-1.33-20160414
+panopoly-7.x-1.34-20160421
