--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,4 @@ panopoly-7.x-1.32-20160310
 panopoly-7.x-1.32-20160413
 panopoly-7.x-1.33-20160414
 panopoly-7.x-1.34-20160421
+panopoly-7.x-1.34-20160428
