--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,4 @@ panopoly-7.x-1.32-20160413
 panopoly-7.x-1.33-20160414
 panopoly-7.x-1.34-20160421
 panopoly-7.x-1.34-20160428
+panopoly-7.x-1.35-20160505
