--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,4 @@ panopoly-7.x-1.33-20160414
 panopoly-7.x-1.34-20160421
 panopoly-7.x-1.34-20160428
 panopoly-7.x-1.35-20160505
+buildamodule-7.43-20160519
