--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,4 @@ panopoly-7.x-1.34-20160421
 panopoly-7.x-1.34-20160428
 panopoly-7.x-1.35-20160505
 buildamodule-7.43-20160519
+panopoly-7.x-1.35-20160526
