--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,4 @@ panopoly-7.x-1.35-20160505
 buildamodule-7.43-20160519
 panopoly-7.x-1.35-20160526
 panopoly-7.x-1.35-20160531
+buildamodule-7.43-20160531
