--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,4 @@ buildamodule-7.43-20160519
 panopoly-7.x-1.35-20160526
 panopoly-7.x-1.35-20160531
 buildamodule-7.43-20160531
+panopoly-7.x-1.35-20160602
