--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,4 @@ panopoly-7.x-1.35-20160526
 panopoly-7.x-1.35-20160531
 buildamodule-7.43-20160531
 panopoly-7.x-1.35-20160602
+panopoly-7.x-1.35-20160609
