--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,4 @@ panopoly-7.x-1.35-20160531
 buildamodule-7.43-20160531
 panopoly-7.x-1.35-20160602
 panopoly-7.x-1.35-20160609
+panopoly-7.x-1.37-20160616
