--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,4 @@ buildamodule-7.43-20160531
 panopoly-7.x-1.35-20160602
 panopoly-7.x-1.35-20160609
 panopoly-7.x-1.37-20160616
+buildamodule-7.44-20160616
