--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,4 @@ panopoly-7.x-1.35-20160602
 panopoly-7.x-1.35-20160609
 panopoly-7.x-1.37-20160616
 buildamodule-7.44-20160616
+buildamodule-7.44-20160623
