Updating to latest version...

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "kwall-20160711-0"]
 	path = kwall-20160711-0
 	url = git@git.kwallco.com:kwall/sonoma.git
+[submodule "kwall-20160712-0"]
+	path = kwall-20160712-0
+	url = git@git.kwallco.com:kwall/sonoma.git
