--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "kwall-20160712-0"]
 	path = kwall-20160712-0
 	url = git@git.kwallco.com:kwall/sonoma.git
+[submodule "kwall-20160712-1"]
+	path = kwall-20160712-1
+	url = git@git.kwallco.com:kwall/sonoma.git
