--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,4 @@ panopoly-7.x-1.37-20160616
 buildamodule-7.44-20160616
 buildamodule-7.44-20160623
 buildamodule-7.50-20160718
+panopoly-7.x-1.37-20160718
