--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "kwall-20160712-1"]
 	path = kwall-20160712-1
 	url = git@git.kwallco.com:kwall/sonoma.git
+[submodule "kwall-20160714-0"]
+	path = kwall-20160714-0
+	url = git@git.kwallco.com:kwall/sonoma.git
