--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "kwall-20160714-0"]
 	path = kwall-20160714-0
 	url = git@git.kwallco.com:kwall/sonoma.git
+[submodule "kwall-20160725-0"]
+	path = kwall-20160725-0
+	url = git@git.kwallco.com:kwall/sonoma.git
