--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,4 @@ buildamodule-7.44-20160623
 buildamodule-7.50-20160718
 panopoly-7.x-1.37-20160718
 panopoly-7.x-1.37-20160720
+buildamodule-7.50-20160728
