--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,4 @@ buildamodule-7.50-20160718
 panopoly-7.x-1.37-20160718
 panopoly-7.x-1.37-20160720
 buildamodule-7.50-20160728
+panopoly-7.x-1.37-20160728
