--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,4 @@ panopoly-7.x-1.37-20160718
 panopoly-7.x-1.37-20160720
 buildamodule-7.50-20160728
 panopoly-7.x-1.37-20160728
+panopoly-7.x-1.38-20160804
