--- a/.gitmodules
+++ b/.gitmodules
@@ -1,24 +1,24 @@
 [submodule "kwall-20160620_233346"]
 	path = kwall-20160620_233346
-	url = git@git.kwallco.com:kwall/sonoma.git
+	url = git@github-appliance.sonoma.edu:drupal/kwall.git
 [submodule "kwall-20160622_000216"]
 	path = kwall-20160622_000216
-	url = git@git.kwallco.com:kwall/sonoma.git
+	url = git@github-appliance.sonoma.edu:drupal/kwall.git
 [submodule "kwall-20160707-0"]
 	path = kwall-20160707-0
-	url = git@git.kwallco.com:kwall/sonoma.git
+	url = git@github-appliance.sonoma.edu:drupal/kwall.git
 [submodule "kwall-20160711-0"]
 	path = kwall-20160711-0
-	url = git@git.kwallco.com:kwall/sonoma.git
+	url = git@github-appliance.sonoma.edu:drupal/kwall.git
 [submodule "kwall-20160712-0"]
 	path = kwall-20160712-0
-	url = git@git.kwallco.com:kwall/sonoma.git
+	url = git@github-appliance.sonoma.edu:drupal/kwall.git
 [submodule "kwall-20160712-1"]
 	path = kwall-20160712-1
-	url = git@git.kwallco.com:kwall/sonoma.git
+	url = git@github-appliance.sonoma.edu:drupal/kwall.git
 [submodule "kwall-20160714-0"]
 	path = kwall-20160714-0
-	url = git@git.kwallco.com:kwall/sonoma.git
+	url = git@github-appliance.sonoma.edu:drupal/kwall.git
 [submodule "kwall-20160725-0"]
 	path = kwall-20160725-0
-	url = git@git.kwallco.com:kwall/sonoma.git
+	url = git@github-appliance.sonoma.edu:drupal/kwall.git
