--- a/.gitmodules
+++ b/.gitmodules
@@ -24,4 +24,4 @@
 	url = git@github-appliance.sonoma.edu:drupal/kwall.git
 [submodule "kwall-20160804-0"]
 	path = kwall-20160804-0
-	url = git@git.kwallco.com:kwall/sonoma.git
+	url = git@github-appliance.sonoma.edu:drupal/kwall.git
