--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,4 @@ panopoly-7.x-1.37-20160720
 buildamodule-7.50-20160728
 panopoly-7.x-1.37-20160728
 panopoly-7.x-1.38-20160804
+buildamodule-7.50-20160811
