--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,4 @@ buildamodule-7.50-20160728
 panopoly-7.x-1.37-20160728
 panopoly-7.x-1.38-20160804
 buildamodule-7.50-20160811
+panopoly-7.x-1.38-20160811
