--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "kwall-20160811-0"]
 	path = kwall-20160811-0
 	url = git@git.kwallco.com:kwall/sonoma.git
+[submodule "kwall-20160815-0"]
+	path = kwall-20160815-0
+	url = git@git.kwallco.com:kwall/sonoma.git
