--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "kwall-20160815-0"]
 	path = kwall-20160815-0
 	url = git@git.kwallco.com:kwall/sonoma.git
+[submodule "kwall-20160819-0"]
+	path = kwall-20160819-0
+	url = git@git.kwallco.com:kwall/sonoma.git
