--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,4 @@ panopoly-7.x-1.38-20160804
 buildamodule-7.50-20160811
 panopoly-7.x-1.38-20160811
 panopoly-7.x-1.40-20160826
+buildamodule-7.50-20160831
