--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,4 @@ buildamodule-7.50-20160811
 panopoly-7.x-1.38-20160811
 panopoly-7.x-1.40-20160826
 buildamodule-7.50-20160831
+panopoly-7.x-1.40-20160831
