--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,6 @@
 [submodule "kwall-20160819-0"]
 	path = kwall-20160819-0
 	url = git@git.kwallco.com:kwall/sonoma.git
+[submodule "kwall-20160901-0"]
+	path = kwall-20160901-0
+	url = git@git.kwallco.com:kwall/sonoma.git
