--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,6 @@
 [submodule "kwall-20160901-0"]
 	path = kwall-20160901-0
 	url = git@git.kwallco.com:kwall/sonoma.git
+[submodule "kwall-20160916-0"]
+	path = kwall-20160916-0
+	url = git@git.kwallco.com:kwall/sonoma.git
